examples/errors/keyword_var.at
fn main():
    let a = 1
    let match = 2
